--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,22 @@
 
   </div>
 
+<!-- Chat Template -->
+<script id="chat-template" type="text/x-handlebars-template">
+  <h3 class="ui orange header">Room ID -> <strong>{{ room }}</strong></h3>
+  <hr>
+  <div id="chat-content" class="ui feed"> </div>
+  <hr>
+  <div class="ui form">
+    <div class="ui field">
+      <label>Post Message</label>
+      <textarea id="post-message" name="post-message" rows="1"></textarea>
+    </div>
+    <div id="post-btn" class="ui primary submit button">Send</div>
+  </div>
+</script>
+
+
   <!-- Scripts -->
   <script src="scripts/jquery/dist/jquery.min.js"></script>
   <script src="scripts/semantic-ui-css/semantic.min.js"></script>
